--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h3{
     width: 100px;
     height: 100px;
     /* background-color: yellowgreen; */
-    background-image: linear-gradient(to left, rgb(9, 72, 207) , rgb(249, 5, 184));
+    background-image: linear-gradient(130deg, rgb(9, 72, 207) , rgb(249, 5, 184));
     border-radius: 50px;
     margin-top: 10px;
     box-shadow: 2px 4px rgba(0, 66, 88, 0.2);
@@ -25,19 +25,34 @@ h3{
 .oval-2{
     width: 200px;
     height: 160px;
-    background: rgba(255, 255, 255, 0.4);
-    backdrop-filter: saturate(180%) blur(15px);
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: saturate(180%) blur(8px);
     /* background-image: linear-gradient(to left, rgb(2, 174, 247) , rgb(147, 5, 249)); */
     border-radius: 90px;
     margin-top: -80px;
+    box-shadow: 5px 5px rgb(0, 66, 88, 0.1);
+    margin-left: 20px;
 
 }
+
+
 
 .trapizum{
     margin-left: 100px;
     width: 200px;
     height: 200px;
-    background-image: linear-gradient(to left, rgb(2, 174, 247) , rgb(147, 5, 249));
+    background-image: linear-gradient(70deg, rgb(2, 174, 247) , rgb(147, 5, 249));
     transform: skew(-20deg);
     
+}
+
+
+.shadow {
+    box-shadow: 
+    0 13px 27px -5px rgba(50, 50, 93, 0.25),
+    0 8px 16px -8px rgba(0, 0, 0, 0.3);
+    height: 200px;
+    width: 200px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
 }
